# CNN-Geoguesser

./: .gitignore  README.md  binary.ipynb  data.py  main.ipynb  pyproject.toml  train.py  train.sh
data/: main.py
data/logs/validation/: events.out.tfevents.1745827166.Suyogs-MacBook-Pro.local.40364.3.v2
logs/train/: events.out.tfevents.1745638179.Suyogs-MacBook-Pro.local.40364.0.v2  events.out.tfevents.1745827040.Suyogs-MacBook-Pro.local.40364.2.v2  events.out.tfevents.1745855308.Suyogs-MacBook-Pro.local.40364.4.v2
logs/validation/: events.out.tfevents.1745638201.Suyogs-MacBook-Pro.local.40364.1.v2
notebooks/: dl.ipynb
src/: config.py  data.py  model.py  train.py
