[project]
name = "cnn-geoguesser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "shapely>=2.1.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]
